// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Basic Rendering renders button with default props: default 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Test Button
  </Text>
</View>
`;

exports[`Button Basic Rendering renders different button sizes: lg-size 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    LG Button
  </Text>
</View>
`;

exports[`Button Basic Rendering renders different button sizes: md-size 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    MD Button
  </Text>
</View>
`;

exports[`Button Basic Rendering renders different button sizes: sm-size 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 12,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    SM Button
  </Text>
</View>
`;

exports[`Button Button Content renders children when provided 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text>
    Custom Content
  </Text>
</View>
`;

exports[`Button Button Interactions calls onPress for outline button: outline-interaction 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#1C1B1F",
        },
      ]
    }
  >
    Press Me
  </Text>
</View>
`;

exports[`Button Button Interactions calls onPress for solid button: solid-interaction 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Press Me
  </Text>
</View>
`;

exports[`Button Button Press States applies pressed style for solid button 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Solid Button
  </Text>
</View>
`;

exports[`Button Button States renders disabled button button correctly: disabled button 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      {
        "opacity": 0.7,
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Disabled
  </Text>
</View>
`;

exports[`Button Button States renders full width button button correctly: full width button 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      {
        "alignSelf": "stretch",
      },
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Full Width
  </Text>
</View>
`;

exports[`Button Button States renders selected outline button (renders as solid) button correctly: selected outline button (renders as solid) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  color="primary"
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={true}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#1C1B1F",
        },
      ]
    }
  >
    Selected Outline
  </Text>
</View>
`;

exports[`Button Button Variants renders outline neutral button correctly: outline neutral 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  color="neutral"
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#1C1B1F",
        },
      ]
    }
  >
    Outline Neutral
  </Text>
</View>
`;

exports[`Button Button Variants renders outline primary button correctly: outline primary 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  color="primary"
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#1C1B1F",
        },
      ]
    }
  >
    Outline Primary
  </Text>
</View>
`;

exports[`Button Button Variants renders solid neutral button correctly: solid neutral 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  color="neutral"
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Solid Neutral
  </Text>
</View>
`;

exports[`Button Button Variants renders solid primary button correctly: solid primary 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  color="primary"
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 6,
        "height": 66,
        "justifyContent": "center",
      },
      {
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#F83758",
        "borderColor": "#E0E0E0",
        "borderWidth": 1,
      },
      false,
      undefined,
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "fontSize": 29,
          "fontWeight": "600",
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    Solid Primary
  </Text>
</View>
`;
